<resources>
    <string name="app_name">Scoreboard</string>
    <string name="setting">Impostazioni</string>
    <string name="extra_time_option">Supp. in caso di parità</string>
    <string name="duration_time">Durata tempo</string>
    <string name="duration_time_spinner">Scegli</string>
    <string-array name="Array_Minutes_Debug">
        <item>15 minuti</item>
        <item>10 minuti</item>
        <item>5 minuti</item>
        <item>10 secondi</item>
    </string-array>
    <string-array name="Array_Minutes">
        <item>15 minuti</item>
        <item>10 minuti</item>
        <item>5 minuti</item>
    </string-array>
    <string name="proceed">Procedi</string>
    <string name="home">HOME</string>
    <string name="away">AWAY</string>
    <string name="kick_off">Kick Off</string>
    <string name="first_half">1st Half</string>
    <string name="second_half">2nd Half</string>
    <string name="goal_team">GOOOL\n%1$s!</string>
    <string name="announce_over_time">Over Time:\n+%1$s</string>
    <string name="half_time">Half time</string>
    <string name="end_game">End game\n%1$s</string>
    <string name="extra_time">Extra time</string>
    <string name="home_wins">Home wins</string>
    <string name="tie">Tie</string>
    <string name="away_wins">Away wins</string>
    <string name="first_extra_half">1st Extra Half</string>
    <string name="second_extra_half">2nd Extra Half</string>
    <string name="penalties">Penalties</string>
    <string name="zero">0</string>
    <string name="init_timer">00:00</string>
    <string name="paused">Paused</string>
    <string name="home_selection">Casa</string>
    <string name="away_selection">Trasferta</string>
    <string name="half_time_minutes">45:00</string>
    <string name="full_time_minutes">90:00</string>
    <string name="extra_half_time_minutes">105:00</string>
    <string name="extra_full_time_minutes">120:00</string>
    <string name="over_minutes">+%1$s</string>
    <string name="crowd">Pubblico</string>
    <string name="home_factor">Fattore casa</string>
</resources>